# MSchunker

./: README.md  pyproject.toml
examples/: analyze_and_explain.py  basic_usage.py  paragraph_split.py
mschunker/: __init__.py  core.py
smartchunk/: __init__.py  core.py
tests/: test_basic.py  test_edge_cases.py  test_limits_and_overlap.py  test_mschunker.py  test_smartchunk.py
