[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mschunker"
version = "0.1.0"
description = "Smart text chunker for LLM preprocessing: sections → paragraphs → sentences → hard splits."
authors = [
  { name = "MS" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cspnms/MSchunker"
