[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mschunker"                    # PyPI / pip name
version = "0.1.4.1"
description = "MSchunker – Smart text chunker for LLM preprocessing"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "MS" }
]
keywords = ["llm", "rag", "chunking", "nlp", "ai"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/cspnms/MSchunker"
Source   = "https://github.com/cspnms/MSchunker"
Issues   = "https://github.com/cspnms/MSchunker/issues"
